--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             </div>
         </div>
     </footer>
-    <!-- <script src="src/script.js"></script> -->
+    <script src="src/script.js"></script>
 </body>
 
 </html>
