removed action from form index.html

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     to you as soon as possible</p>
             </div>
 
-            <form id="contactForm" action="mailto:krabhisingh008@gmail.com" method="post" enctype="text/plain">
+            <form id="contactForm" action="" method="post" enctype="text/plain">
                 <div>
                     <input id="namePer" type="text" placeholder="NAME">
                     <small></small>
